--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -3,3 +3,18 @@ ignite-client:
   addresses: 'localhost:10800'
 server:
   port: 8082
+
+spring:
+  sql.init.mode: always
+  database: POSTGRESQL
+  hibernate.ddl-auto: validate
+  show-sql: true
+spring.datasource:
+  initialization-mode: always
+  platform: postgres
+  driverClassName: org.postgresql.Driver
+  url: jdbc:postgresql://localhost:5432/ignite-with-db
+  username: test
+  password: 123
+
+
